--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,19 @@
 		    <artifactId>opencsv</artifactId>
 		    <version>5.7.1</version>
 		</dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.28</version>
+		<scope>provided</scope>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20230227</version>
+	</dependency>
 
 	</dependencies>
 	
